# SOL-TOKEN-2022-TOKEN-LAYER

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  program-ids.json  text.md
programs/hook-registry/: Cargo.toml
programs/hook-registry/src/: lib.rs
programs/hookswap-amm/: Cargo.toml
programs/hookswap-amm/src/: lib.rs
programs/kyc-hook/: Cargo.toml
programs/kyc-hook/src/: lib.rs
programs/token-layer/: Cargo.toml
programs/token-layer/src/: lib.rs  lib.rs.backup
programs/whitelist-hook/: Cargo.toml
programs/whitelist-hook/src/: lib.rs
scripts/: .env  demo_workflow.sh  initialize_devnet_system.js  package-lock.json  package.json  project_summary.sh  run_init.sh  simple_init.js
tests/: hookswap_amm.ts  kyc-hook.ts  working-integration.ts
