[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "=2.1.0"
spl-token-2022 = "=0.15.0"
spl-transfer-hook-interface = "=0.8.0"
spl-tlv-account-resolution = "=0.8.0"
spl-type-length-value = "=0.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1