[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["token_2022"] }
solana-program = "~1.17.0"
spl-transfer-hook-interface = "0.5.0"
spl-tlv-account-resolution = "0.5.0" 
spl-type-length-value = "0.2.0"
spl-token-2022 = "1.0.0"
spl-associated-token-account = "2.0.0"
spl-token = "4.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1