[package]
name = "hook-registry"
version = "0.1.0"
description = "Hook Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hook_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }