[package]
name = "hookswap-amm"
version = "0.1.0"
description = "HookSwap AMM Core"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hookswap_amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }