[package]
name = "kyc-hook"
version = "0.1.0"
description = "KYC Hook"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyc_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }