[package]
name = "kyc-hook"
version = "0.1.0"
description = "KYC Transfer Hook for Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyc_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-type-length-value = { workspace = true }
spl-token-2022 = { workspace = true }