[package]
name = "token-layer"
version = "0.1.0"
description = "HookSwap Token Layer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_layer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }