[package]
name = "whitelist-hook"
version = "0.1.0"
description = "Whitelist Hook"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whitelist_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-type-length-value = { workspace = true }